--- a/bot/admin/web/src/app/bot/story/steps.component.html
+++ b/bot/admin/web/src/app/bot/story/steps.component.html
@@ -24,12 +24,22 @@
         {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
       </mat-icon>
     </button>
-    <tock-step [step]="node" (delete)="deleteStep($event)" (child)="addNewStep(node)" [defaultCategory]="defaultCategory" class="step" [readonly]="readonly"></tock-step>
+    <tock-step
+      [step]="node"
+      (delete)="deleteStep($event)"
+      (child)="addNewStep(node)"
+      (rebuildTree)="rebuildTree(node)"
+      [defaultCategory]="defaultCategory"
+      class="step"
+      [readonly]="readonly"></tock-step>
   </mat-tree-node>
 </mat-tree>
 <div *ngIf="!readonly" class="action">
   <button mat-button (click)="addNewStep()" color="primary">
     <mat-icon>dns</mat-icon> Add Action
+  </button>
+  <button mat-icon-button matTooltip="Generate Actions from Entity" (click)="generate()">
+    <mat-icon>playlist_add</mat-icon> Generate from Entity
   </button>
 </div>
 
