fixes #844 inconsistencies + refactor and improve Bot Flow
- fixes inconsistent Flow presentation when story and intent have differents names
- refactor Bot Flow model build
- modify Bot Flow options layout and node presentation details, tooltips, etc.
- show story types in Bot Flow selects, including old stories with unknown type
- add Bot Flow options: merge old stats to latest stories, show story types in graph, show debug info

Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/bot/flow/flow.component.css
+++ b/bot/admin/web/src/app/bot/flow/flow.component.css
@@ -30,6 +30,10 @@ tock-cytoscape {
   margin-left: 10px;
 }
 
+.select-story {
+  min-width: 200px;
+}
+
 .checkbox {
   margin-left: 10px;
 }
@@ -72,4 +76,44 @@ tock-cytoscape {
 .story-btn {
   float: right;
   margin-top: 10px;
+}
+
+.story-type {
+  margin-right: 10px;
+  font-size: 18px;
+}
+
+.statsMode-badge {
+  width: 100px;
+  text-align: center;
+  margin-right: 0.5em;
+  border-radius: 25px;
+  padding: 8px;
+  margin-left: 10px;
+  font-size: small;
+}
+
+.statsMode-true {
+  background-color: #00d68f;
+}
+
+.statsMode-false {
+  background-color: lightblue;
+}
+
+.flow-option-group {
+  margin: 0;
+}
+
+.flow-option-group-name {
+  font-style: italic;
+  display: inline-block;
+  min-width: 150px;
+}
+
+.flow-stat {
+  font-size: small;
+  font-style: italic;
+  display: inline-block;
+  padding: 0 20px;
 }
