--- a/bot/admin/web/src/app/bot/story/step.component.html
+++ b/bot/admin/web/src/app/bot/story/step.component.html
@@ -103,13 +103,13 @@
   </div>
 
   <div *ngIf="canDownward" class="entity-button">
-    <button mat-icon-button
+    <button mat-icon-button color="accent"
             matTooltip="Downward" (click)="downwardStep()">
       <mat-icon>arrow_downward</mat-icon>
     </button>
   </div>
   <div *ngIf="canUpward" class="entity-button">
-    <button mat-icon-button
+    <button mat-icon-button color="accent"
             matTooltip="Upward" (click)="upwardStep()">
       <mat-icon>arrow_upward</mat-icon>
     </button>
