--- a/nlp/admin/web/src/app/entities/entities.component.html
+++ b/nlp/admin/web/src/app/entities/entities.component.html
@@ -44,7 +44,7 @@
   <nb-card-header>Configuration for {{ selectedEntityType.name }}</nb-card-header>
   <nb-card-body>
     <mat-checkbox [(ngModel)]="selectedEntityType.obfuscated" class="no-model model" (change)="updateEntityType()"
-                  matTooltip="If selected all values are obfuscated in Tock Studio">Obsfuscated
+                  matTooltip="If selected all values are obfuscated in Tock Studio">Obfuscated
     </mat-checkbox>
   </nb-card-body>
 </nb-card>
