--- a/bot/admin/web/src/app/bot/flow/flow.component.html
+++ b/bot/admin/web/src/app/bot/flow/flow.component.html
@@ -46,6 +46,18 @@
                          (selectionChange)="displayFlow($event)" class="select">
         </tock-select-bot>
         <span class="select">
+          <nb-select placeholder="Story Type" status="primary" [(ngModel)]="selectedTypeFilter"
+                     (selectedChange)="update()" nbTooltip="Filter by Story Type" class="select-type">
+            <nb-select-label>{{selectedTypeFilter.name}}</nb-select-label>
+            <nb-option *ngFor="let typeFilter of typeFilters" [value]="typeFilter"
+                       [disabled]="typeFilterCounters.get(typeFilter) < 1">
+              <span title="{{typeFilter.description}}">
+                {{typeFilter.name}}
+                <span *ngIf="typeFilterCounters.get(typeFilter) > 0"> ({{typeFilterCounters.get(typeFilter)}})</span></span>
+            </nb-option>
+          </nb-select>
+        </span>
+        <span class="select">
           <nb-select *ngIf="!statsMode" [(selected)]="selectedStory" (selectedChange)="update()"
                      nbTooltip="Story Focus" placeholder="Story Focus" status="primary" class="select-story">
             <nb-select-label>
@@ -57,7 +69,8 @@
               </span>
             </nb-select-label>
             <nb-option [value]="undefined">All</nb-option>
-            <nb-option *ngFor="let entry of storiesById | keyvalue" [value]="entry.value">
+            <nb-option *ngFor="let entry of storiesById | keyvalue" [value]="entry.value"
+                       [disabled]="!selectedTypeFilter.filter(entry.value)">
               <mat-icon *ngIf="entry.value.isBuiltIn()" class="story-type" matTooltip="BuiltIn">build</mat-icon>
               <mat-icon *ngIf="entry.value.isSimpleAnswer()" class="story-type" matTooltip="Message">message</mat-icon>
               <mat-icon *ngIf="entry.value.isScriptAnswer()" class="story-type" matTooltip="Script">code</mat-icon>
@@ -76,7 +89,8 @@
               </span>
             </nb-select-label>
             <nb-option [value]="undefined">All</nb-option>
-            <nb-option *ngFor="let entry of nodesById | keyvalue" [value]="entry.value">
+            <nb-option *ngFor="let entry of nodesById | keyvalue" [value]="entry.value"
+                       [disabled]="!selectedTypeFilter.filter(entry.value)">
               <mat-icon *ngIf="entry.value.isBuiltIn()" class="story-type" matTooltip="BuiltIn">build</mat-icon>
               <mat-icon *ngIf="entry.value.isSimpleAnswer()" class="story-type" matTooltip="Message">message</mat-icon>
               <mat-icon *ngIf="entry.value.isScriptAnswer()" class="story-type" matTooltip="Script">code</mat-icon>
@@ -102,14 +116,20 @@
 
       <div class="flow-option-group" *ngIf="statsMode">
         <span class="flow-option-group-name">Filters:</span>
-        <nb-checkbox [(ngModel)]="mergeOldStories" (change)="update()" class="checkbox"
-                     matTooltip="Merge Old Stats to Latest Stories when possible">Merge to Latest Stories</nb-checkbox>
-        <span matTooltip="Filter by Minimum Traffic through Node">Min. Node Traffic: </span>
-        <mat-slider thumbLabel tickInterval="1" [(ngModel)]="minimalNodeCount" [max]="maxNodeCount"
-                    (change)="updateCount()"></mat-slider>
-        <span matTooltip="Filter by Minimum Percentage of Transitions">Min. Transition %: </span>
-        <mat-slider thumbLabel tickInterval="1" [(ngModel)]="minimalTransitionPercentage"
-                    (change)="updateCount()"></mat-slider>
+        <span>
+          <nb-checkbox [(ngModel)]="mergeOldStories" (change)="update()" class="checkbox"
+                       matTooltip="Merge Old Stats to Latest Stories when possible">Merge to Latest Stories</nb-checkbox>
+        </span>
+        <span>
+          <span matTooltip="Filter by Minimum Traffic through Node">Min. Node Traffic: </span>
+          <mat-slider thumbLabel tickInterval="1" [(ngModel)]="minimalNodeCount" [max]="maxNodeCount"
+                      (change)="updateCount()"></mat-slider>
+        </span>
+        <span>
+          <span matTooltip="Filter by Minimum Percentage of Transitions">Min. Transition %: </span>
+          <mat-slider thumbLabel tickInterval="1" [(ngModel)]="minimalTransitionPercentage"
+                      (change)="updateCount()"></mat-slider>
+        </span>
       </div>
 
       <div class="flow-option-group">
@@ -130,10 +150,13 @@
                      matTooltip="Display Debug stats">Debug</nb-checkbox>
         <span *ngIf="displayDebug">
           <span class="flow-stat" *ngIf="nodesById || storiesById">
-            Visible Stories: {{ statsMode ? nodesById.size : storiesById.size }}
+            Total Stories: {{ statsMode ? nodesById.size : storiesById.size }}
           </span>
-            <span class="flow-stat" *ngIf="allTransitions">
-            Visible Transitions: {{ allTransitions.size }}
+          <span class="flow-stat" *ngIf="nodesById || storiesById">
+            Filtered Stories: {{ allNodes.length }}
+          </span>
+          <span class="flow-stat" *ngIf="allTransitions">
+            Filtered Transitions: {{ allTransitions.size }}
           </span>
         </span>
       </div>
