--- a/bot/admin/web/src/app/monitoring/history/history.component.html
+++ b/bot/admin/web/src/app/monitoring/history/history.component.html
@@ -16,7 +16,7 @@
 <div class="users">
   <div class="inbox_msg">
     <div class="inbox_people">
-      <nb-card style="margin-bottom: 0">
+      <nb-card style="margin-bottom">
         <nb-card-header class="card-height" [nbSpinner]="loading" nbSpinnerStatus="primary">
           <span *ngIf="total > 0">
             <span *ngIf="total> 10 && !loading">Estimated</span> users : {{total}}
