fixes #896 Translate issue in Story Builder action label when using different browser locales

--- a/bot/admin/web/src/app/bot/story/step.component.html
+++ b/bot/admin/web/src/app/bot/story/step.component.html
@@ -20,7 +20,7 @@
     <input matInput
            *ngIf="!step.new"
            required
-           [(ngModel)]="step.userSentence.defaultLocalizedLabelForLocale(state.currentLocale).label"
+           [(ngModel)]="step.userSentence.defaultLabel"
            placeholder="Enter a User Phrase"
            (blur)="userSentenceChange($event.target.value)">
     <input matInput
