--- a/bot/admin/web/src/app/bot/story/steps.component.html
+++ b/bot/admin/web/src/app/bot/story/steps.component.html
@@ -28,6 +28,7 @@
       [step]="node"
       (delete)="deleteStep($event)"
       (child)="addNewStep(node)"
+      (duplicate)="duplicateStep(node)"
       (rebuildTree)="rebuildTree(node)"
       [defaultCategory]="defaultCategory"
       class="step"
